--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "eureka-js-client": "^4.5.0",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "mongoose": "^6.9.2",
     "mysql2": "^2.3.3",
     "mysqlx": "^1.1.7",
     "sequelize": "^6.27.0",
